added styled-components and themes

--- a/src/posts/fourth-post/index.mdx
+++ b/src/posts/fourth-post/index.mdx
@@ -3,5 +3,10 @@ title: Grand Canyon ((canyon canyon canyon...))
 slug: fourth-post
 date: 2021-02-22
 featureImage: canyon2.jpg
+featuredImgAlt: the grand canyon
 excerpt: Fringilla est ullamcorper eget nulla facilisi. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Ultrices vitae auctor eu augue ut lectus arcu bibendum at. Accumsan sit amet nulla facilisi morbi tempus. Magna ac placerat vestibulum lectus mauris ultrices eros in cursus. Egestas sed sed risus pretium quam vulputate dignissim. Sed sed risus pretium quam vulputate dignissim suspendisse. Tristique magna sit amet purus gravida quis. Purus in massa tempor nec feugiat nisl pretium. Etiam tempor orci eu lobortis elementum nibh tellus. Id nibh tortor id aliquet. Neque egestas congue quisque egestas diam. Nec sagittis aliquam malesuada bibendum arcu vitae. Risus quis varius quam quisque id diam. Nunc id cursus metus aliquam eleifend mi in nulla posuere. Nisl pretium fusce id velit ut tortor pretium.
+featureImage: canyon3.jpg
+featuredImgAlt: wooden sign for badwater basin
+featureImage: canyon1.jpg
+featuredImgAlt: the grand canyon again
 ---
