--- a/src/posts/third-post/index.mdx
+++ b/src/posts/third-post/index.mdx
@@ -3,5 +3,10 @@ title: Through the looking-glass
 slug: third-post
 date: 2021-02-18
 featureImage: dribble2.jpg
+featuredImgAlt: vibrant trippy vector image of a woman going through a door
 excerpt: Donec ac odio tempor orci. Leo duis ut diam quam nulla porttitor. Et sollicitudin ac orci phasellus egestas tellus. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit amet. Nunc sed id semper risus in hendrerit gravida rutrum quisque. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. Fermentum posuere urna nec tincidunt praesent semper feugiat. Nunc congue nisi vitae suscipit tellus mauris a. A scelerisque purus semper eget duis at tellus. Enim neque volutpat ac tincidunt vitae semper. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Enim sit amet venenatis urna cursus eget. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Enim sit amet venenatis urna cursus eget nunc scelerisque viverra. Pulvinar neque laoreet suspendisse interdum consectetur libero id. Nibh tortor id aliquet lectus proin nibh nisl. Cursus euismod quis viverra nibh cras. Cursus eget nunc scelerisque viverra mauris. Ullamcorper velit sed ullamcorper morbi tincidunt ornare.
+featureImage: dribble1.jpg
+featuredImgAlt: foot stepping out of door
+featureImage: dribble3.jpg
+featuredImgAlt: sliding through door
 ---
